# dbms

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.yaml  dbml-app-roadmap.md  package-lock.json  package.json  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
.github/workflows/: deploy.yml
client/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
client/src/: App.tsx  api.ts  dbml.ts  styles.css  types.ts  vite-env.d.ts
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  routes.rs
